# CervantesInfinito

./: LICENSE  README.md  cervantesgpt.py  main.py  pyproject.toml  quijotedownloader.py  requirements.in  requirements.txt
cervantesinfinito/: _version.py  cervantesgpt.py  main.py  quijotedownloader.py
